@@ -1,3 +1,7 @@
+2005-09-19 Kimmo
+ PATCH: [ 1294595 ] Manual: Update options
+  Manual: Configuration.xml
+
 2005-09-18 Kimmo
  PATCH: [ 1294162 ] Manual: First update to file compare
   Manual: Compare_filex.xml
